# llama.cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  build-info.h  build-wingman-ci.ps1  metrics.json  vcpkg.json
.github/workflows/: wingman-build.yml
enc_temp_folder/f2b23f84909cd9d9b22ba7b3511c4de/: orm.hpp
examples/: CMakeLists.txt
examples/gguf/: CMakeLists.txt  gguf-info.cpp
examples/wingman/: CMakeLists.txt  common.h  download.server.cpp  download.server.hpp  on_exit.cpp  on_exit.h  orm.hpp  physical_cores_windows.cpp  prompt copy.md  tableinfo.cpp  types.h  wingman.cpp  wingman.launcher.cpp
examples/wingman/common/: download.server.types.h  json.transforms.cpp  json.transforms.h
examples/wingman/orm/: app.cpp  app.h  databaseactions.cpp  databaseactions.h  downloaditem.cpp  downloaditem.h  factory.cpp  factory.h  orm.h  types.h  wingmanitem.cpp  wingmanitem.h
examples/wingman/tests/: CMakeLists.txt  orm-download_set.cpp
wingman/: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.template.json  notes.md  wingman.cpp  wingman.inference.cpp  wingman.inference.x.cpp  wingman.server.cpp  wingman.server.integration.cpp  wingman_launcher.cpp  wingman_reset.cpp
wingman/apps/: CMakeLists.txt  README.md  download.cpp  pull.cpp  retrieve.cpp  store.cpp
wingman/include/: control.h  curl.h  download.service.h  downloader.h  embedding.h  embedding.index.h  exceptions.h  hwinfo.h  inferable.h  ingest.h  llama.hpp  llama_integration.h  metadata.h  mimetypes.h  modelcard.h  on_exit.h  opencl.info.h  opengl.info.h  orm.h  owned_cstrings.h  parse_evals.h  progressbar.hpp  types.h  util.hpp  wingman.control.h  wingman.h  wingman.inference.h  wingman.server.integration.h  wingman.service.h
wingman/libsrc/: control.cpp  curl.cpp  download.service.cpp  downloader.cpp  embedding.cpp  embedding.index.cpp  hwinfo.cpp  hwinfo.direct.cpp  inferable.cpp  ingest.cpp  llama_integration.cpp  metadata.cpp  mimetypes.cpp  modelcard.cpp  on_exit.cpp  opencl.info.cpp  opengl.info.cpp  orm.cpp  parse_evals.cpp  types.cpp  wingman.control.cpp  wingman.service.cpp
wingman/mergework/: server.cpp  wingman.server.cpp
wingman/tests/: models.json  orm.appitem.cpp  raw.models.json
wingman/tools/: CMakeLists.txt  README.md  tool.annoy.test.cpp  tool.download.cpp  tool.dump.chat.template.cpp  tool.dump.download.cpp  tool.dump.downloads.metadata.cpp  tool.dump.gpu.cpp  tool.get.ai.models.cpp  tool.get.downloads.cpp  tool.ingest.cpp  tool.insert.download.cpp  tool.insert.wingman.inference.cpp  tool.listavailable.downloads.cpp  tool.multiple.ai.test.cpp  tool.retrieval.test.cpp  tool.retrieve.cpp  tool.run.downloadservice.cpp  tool.set.metadata.existing.downloads.cpp  tool.test.cpp  tool.tests.cpp
